k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pin-backend-svc
  namespace: pin
  labels:
    app: pin-backend
spec:
  ports:
    - port: 8088
      targetPort: 8088
      name: http
  selector:
    app: pin-backend
