k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pin-backend-ingress
  namespace: pin
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: pin.tokens2.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pin-backend-svc
                port:
                  number: 8088
    - host: pin-admin.tokens2.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pin-backend-svc
                port:
                  number: 8088
  tls:
    - hosts:
        - pin.tokens2.io
        - pin-admin.tokens2.io
      secretName: pin-backend-tls
